--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Test and Build
 
 on:
   push:
@@ -30,3 +30,32 @@ jobs:
     
     - name: Test
       run: dotnet test --no-build --verbosity normal
+
+  build:
+    runs-on: ubuntu-latest
+    needs: test
+    
+    strategy:
+      matrix:
+        runtime: [linux-x64, linux-arm64, osx-x64, osx-arm64, win-x64, win-arm64]
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: '10.0.x'
+    
+    - name: Restore dependencies
+      run: dotnet restore
+    
+    - name: Publish self-contained binary
+      run: dotnet publish Genny/Genny.csproj -c Release --self-contained true -r ${{ matrix.runtime }} -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true -o publish/${{ matrix.runtime }}
+    
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: genny-${{ matrix.runtime }}
+        path: publish/${{ matrix.runtime }}/Genny*
+        retention-days: 30
