--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,28 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+    - name: Test with coverage
+      run: dotnet test --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory:"${{ runner.temp }}/TestResults"
+    
+    - name: Generate coverage report
+      run: |
+        dotnet tool install -g dotnet-reportgenerator-globaltool || true
+        reportgenerator -reports:"${{ runner.temp }}/TestResults/**/coverage.cobertura.xml" -targetdir:"${{ runner.temp }}/coverage" -reporttypes:"Html;Cobertura" || echo "No coverage files found or report generation failed"
+    
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v4
+      with:
+        files: ${{ runner.temp }}/TestResults/**/coverage.cobertura.xml
+        fail_ci_if_error: false
+        token: ${{ secrets.CODECOV_TOKEN }}
+        if_ci_failed: false
+    
+    - name: Upload coverage report artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage-report
+        path: ${{ runner.temp }}/coverage
+        retention-days: 30
 
   docker:
     runs-on: ubuntu-latest
