--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,21 +34,27 @@ jobs:
     - name: Generate coverage report
       run: |
         dotnet tool install -g dotnet-reportgenerator-globaltool || true
-        reportgenerator -reports:"${{ runner.temp }}/TestResults/**/coverage.cobertura.xml" -targetdir:"${{ runner.temp }}/coverage" -reporttypes:"Html;Cobertura" || echo "No coverage files found or report generation failed"
+        reportgenerator -reports:"${{ runner.temp }}/TestResults/**/coverage.cobertura.xml" -targetdir:"coverage" -reporttypes:"Html;Cobertura;JsonSummary" || echo "Report generation failed"
     
-    - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v4
-      with:
-        files: ${{ runner.temp }}/TestResults/**/coverage.cobertura.xml
-        fail_ci_if_error: false
-        token: ${{ secrets.CODECOV_TOKEN }}
-        if_ci_failed: false
+    - name: Display coverage summary
+      run: |
+        if [ -f "coverage/Summary.json" ]; then
+          echo "## Code Coverage Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          COVERAGE=$(jq -r '.summary.linecoverage' coverage/Summary.json 2>/dev/null || echo "N/A")
+          BRANCH_COVERAGE=$(jq -r '.summary.branchcoverage' coverage/Summary.json 2>/dev/null || echo "N/A")
+          echo "**Line Coverage:** ${COVERAGE}%" >> $GITHUB_STEP_SUMMARY
+          echo "**Branch Coverage:** ${BRANCH_COVERAGE}%" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "Coverage report available in artifacts." >> $GITHUB_STEP_SUMMARY
+        fi
     
     - name: Upload coverage report artifact
       uses: actions/upload-artifact@v4
+      continue-on-error: true
       with:
         name: coverage-report
-        path: ${{ runner.temp }}/coverage
+        path: coverage
         retention-days: 30
 
   docker:
